--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
     <section class="portfolio" id="portfolio">
 
         <h1 class="heading"> my <span>projects</span> </h1>
+        <div>
+            <p class="heading1">Technologies used:
+                <span class="heading2">M</span><span class="heading3">E</span><span class="heading4">R</span><span
+                    class="heading5">N</span> <span>Stack</span>
+            </p>
+        </div>
 
         <div class="box-container">
 
@@ -255,7 +261,9 @@
                 <a href="https://inshort-clone.netlify.app/" target="_blank">
                     <img src="https://dk2dyle8k4h9a.cloudfront.net/newPages/app_review/inshorts.png" alt="">
                 </a>
+
             </div>
+
             <div class="box">
                 <a href="https://myblog-mern.netlify.app/" target="_blank">
                     <img src="https://cmatskas.com/content/images/2014/Nov/blog_writing.jpg" alt="">
