--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <ul>
                 <li><a href="#home">home</a></li>
                 <li><a href="#about">about</a></li>
+                <li><a href="#skills">skills</a></li>
                 <li><a href="#education">experience & education </a></li>
                 <li><a href="#achieve">achievement </a></li>
                 <li><a href="#portfolio">projects</a></li>
@@ -75,7 +76,7 @@
                 <h3> <span> age : </span> 25 </h3>
                 <h3> <span> qualification : </span> B.E.Electrical Engineering </h3>
                 <h3> <span> languages : </span> English,Hindi,Marathi </h3>
-                <a href="https://drive.google.com/file/d/1CFQzWY4zNA-0Q7pprzxvhh15DnqFAh6H/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/16b0bqCM5lQYxfeaX1dPI9EyWPwiVda3E/view?usp=sharing"
                     target="_blank"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
             </div>
 
@@ -111,6 +112,30 @@
 
     <!-- about section ends -->
 
+    <!-- skill section -->
+
+
+    <section class="skill" id="skills">
+        <h1 class="heading"><span>Skills</span> </h1>
+        <p style="margin-top: 2rem">● JavaScript Programming Language</p>
+        <p>● React.Js</p>
+        <p>● Node.Js</p>
+        <p>● Express.Js</p>
+        <p>● MySQL</p>
+        <p>● MongoDB</p>
+        <p>● Typescript</p>
+        <p>● HTML, CSS & SCSS</p>
+        <p>● Material UI</p>
+        <p>● ORM with sequelize</p>
+        <p>● Exposure with Version control tool GIT</p>
+        <p>● AWS</p>
+        <p>● Agile Development Process</p>
+        <p>● Software Deployment</p>
+        <p>● API testing through Postman API</p>
+        <p>● Software Development</p>
+
+    </section>
+
     <!-- education section starts  -->
 
     <section class="education" id="education">
@@ -121,52 +146,41 @@
 
             <div class="box">
                 <i class="fas fa-briefcase"></i>
-                <span>April 2021 to till date</span>
-                <h3>Full Stack JavaScript Certification Trainee programme</h3>
-                <h3 style="color: rgb(252, 237, 35); font-size: 1.9rem;">( Guvi Geek Network Private Limited,Chennai )
+                <span>Dec 2021 to till date</span>
+                <h3>Solution Engineer</h3>
+                <h3 style="color: rgb(252, 237, 35); font-size: 1.9rem;">( Aligned Automation Services Private Limited )
                 </h3>
-                <p>• Created simple projects with HTML, CSS and JavaScript.</p>
-                <p>• Participated in hackathons with task to fetch data from YouTube API and Ticket booking app with
-                    MERN stack.</p>
-                <p>• Developing frontend website architecture.</p>
-                <p> • Designing user interaction on web pages.</p>
-                <p> • Developing Back-end website application.</p>
-                <p>• Creating server and database for functionality.</p>
-                <p> • Designing and developing APIs using Node.Js and Express.Js.</p>
-                <p>• Ensuring responsiveness of application.</p>
-                <p>• Created sample database for storage purpose with the help of MySQL and MongoDB (NoSQL).</p>
-                <p>• Connected Mongo Atlas cloud database to the backend application.</p>
-                <p>• Developed many simple UI and CRUD App in react.</p>
-                </p>
+                <p>● Analysis of the specifications provided by the clients.</p>
+                <p>● Regular client interaction in order to understand the client requirements.</p>
+                <p>● Develop and write high quality coding that meets customer requirements.</p>
+                <p>● Implementing the modules as per change requests.</p>
+                <p>● Participating in the database development.</p>
+                <p>● Fixing the bugs in stages like DEV, PROD.</p>
+                <p>● Developing webapp architecture.</p>
+
+
+
             </div>
 
 
 
             <div class="box">
                 <i class="fas fa-briefcase"></i>
-                <span>june 2018 to Nov 2020</span>
-                <h3>Project Engineer</h3>
-                <h3 style="color: rgb(252, 237, 35); font-size: 1.9rem;">( Electrovector, Nashik )</h3>
-                <p> • Responsible for maintain, monitoring and performing preventive maintenance of all the critical and
-                    Non-critical equipment’s such as fire & life safety equipment’s, UPS, Generators, HT-LT Panel,
-                    Synchronizing panel, Fire Alarm system, BMS System, etc.
-                </p>
-                <p>• Responsible for preparation of critical spare list for all installation as per manufacturer’s
-                    recommendation and plan for the inventory where the Maintenance is carried out with in-house team.
-                </p>
-                <p> • Implement and oversee the preventive maintenance programme to reduce risk of sudden failures of
-                    critical equipment’s.
-                </p>
-                <p>• Maintain the logbooks, checklist, and ppm schedules for all M&E installations.
-                </p>
-                <p>
-
-
-
-                    • Maintaining all equipment’s in healthy condition and providing technical support to the
-                    electricians. Maintaining structure by carrying out regular repairs/maintenance.
-
-                </p>
+                <span>Aug 2020 to Dec 2021</span>
+                <h3>Software Engineer</h3>
+                <h3 style="color: rgb(252, 237, 35); font-size: 1.9rem;">( Orbinet Technologies Private Limited )</h3>
+                <p>● Designing user interaction on web pages.</p>
+                <p>● Developing Back-end website application.</p>
+                <p>● Creating server and database for functionality.</p>
+                <p>● Designing and developing APIs using Node.Js and Express.Js.</p>
+                <p>● Ensuring responsiveness of application.</p>
+                <p>● Implementing new Modules in the Application.</p>
+                <p>● Created database for storage purpose with the help of MySQL and MongoDB (NoSQL).</p>
+                <p>● Connected Mongo Atlas cloud database to the backend application.</p>
+                <p>● Regular client interaction in order to understand the client requirements.</p>
+                <p>● Responsible to develop the application in order to meet the client requirements.</p>
+                <p>● Implementing the modules as per change requests.</p>
+                <p>● Help the team with technical Documentation.</p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
